Attempt to get a basic truffle build going